feat: atualizar backend, frontend e geração de API
